# tiktok_automation

./: .env  .gitignore  Dockerfile  Procfile  README.md  check_models.py  db.sqlite3  ingest_knowledge.py  init_railway.sh  main.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  start.sh
apps/accounts/: models.py  serializers.py  services.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/analytics/: models.py  serializers.py  services.py  urls.py  views.py
apps/analytics/migrations/: 0001_initial.py
apps/comments_ai/: apps.py  knowledgebase.txt  models.py  serializers.py  services.py  urls.py  views.py
apps/comments_ai/migrations/: 0001_initial.py  0002_knowledgedocument.py  (+1 more)
apps/competitor/: models.py  serializers.py  services.py  urls.py  views.py
apps/content_ai/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/dm_ai/: apps.py  models.py  services.py  urls.py  views.py
apps/orchestrator/: telegram_bot.py
apps/scheduler/: models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/tiktok/: models.py  qr_views.py  serializers.py  services.py  urls.py  views.py
config/: celery.py  settings.py  urls.py  views.py
login_bridge/: apps.py
static/: tiktokcgiCTmYLcxCjsXXH7U7dJNTBrkNcK6Xz.txt  tiktokfLr60W3ybbaaVkRuVsdExA6bpcUuqvHj.txt  tiktokghddr1bZgTI0uxwJFTtgzzltwr4EVAuw.txt
templates/: analytics.html  base.html  content_ai.html  dashboard.html  privacy_policy.html  scheduler.html  terms_and_conditions.html
vector_stores/user_1_comments/: index.faiss  index.pkl
(+10 files in other folders)
